--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DesafioBciApp</title>
+  <title>Desafio Bci - Leonel Rojas</title>
   <base href="/">
-
+  <meta name="author" content="Leonel Rojas">
+	<meta name="description" content="Desafío BCI">
+	<meta name="keywords" content="bci, desafio">
+	<link href="https://fonts.googleapis.com/css?family=Overpass&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+  <link href="assets/css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
